--- a/api/gqlgen.yml
+++ b/api/gqlgen.yml
@@ -18,10 +18,10 @@ model:
   package: model
 
 # Where should the resolver implementations go?
-resolver:
-  layout: follow-schema
-  dir: graph
-  package: graph
+# resolver:
+#   layout: follow-schema
+#   dir: graph
+#   package: graph
 
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
