とりあえず TODO が表示されるように

--- a/api/Makefile
+++ b/api/Makefile
@@ -3,6 +3,7 @@ GOLANG_MIGRATE_VERSION:=v4.11.0
 bin/migrate:
 	cd ./bin; git clone https://github.com/golang-migrate/migrate.git ./golang-migrate; cd golang-migrate; git checkout $(GOLANG_MIGRATE_VERSION)
 	cd ./bin/golang-migrate; GO111MODULE=on go build -tags 'sqlite3'  -o ../migrate ./cmd/migrate; cd ../; rm -fr golang-migrate
+	cd ./bin; chmod +x migrate
 
 .data/db.sqlite3:
 	cd .data; touch db.sqlite3
